--- a/src/main/resources/com/example/demo1/header.fxml
+++ b/src/main/resources/com/example/demo1/header.fxml
@@ -13,6 +13,7 @@
             <Menu text="Navigation">
                 <MenuItem text="Tableau de bord" onAction="#goToDashboard"/>
                 <MenuItem text="Dépenses" onAction="#goToExpenses"/>
+                <MenuItem text="Revenus" onAction="#openRevenuesPage"/>
             </Menu>
         </MenuBar>
         
